--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/pmpm.ico" />
+    <link rel="icon" href="/pomo2.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomo-Pomo</title>
+    <title>PoMo.</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+    </style>
   </head>
   <body>
     <div id="app"></div>
